@@ -518,9 +518,9 @@ cardOBJ = [
 ,[496,100,0,"Recover 2SP each time you kill a monster with a ATK based attack",0]
 ,[497,999,"Beelzebub NPC Card","<br><b>*Warning*</b>Having more then one Beelzebub NPC Card doesn't give -60% cast, it will give you -30% always.<b>*Warning*</b>",73,-30,0] //replace me
 ,[498,1,"Hillsrion",0,17,25,0]
-,[499,1,"Centipede Larva",'MATK + 3<BR><b>*Warning*</b>MATK Bonus not implemented yet since the info on the card is with "Effect Undecided"<b>*Warning*</b>',4,1,0]
-,[500,4,"Banshee Master",'MATK + 10<BR><b>*Warning*</b>MATK Bonus not implemented yet since the info on the card is with "Effect Undecided"<b>*Warning*</b>',4,1,0]
-,[501,4,"Entweihen Crothen","MATK + 100<BR><b>*Warning*</b>MATK Bonus not implemented yet<b>*Warning*</b>",0]
+,[499,1,"Centipede Larva",0,4,1,98,3,0]
+,[500,4,"Banshee Master",0,4,1,98,10,0]
+,[501,4,"Entweihen Crothen",0,98,100,0]
 ,[502,3,"Aqua Elemental",0,61,20,41,5,0]
 ,[503,3,"Centipede",0,65,20,45,5,0]
 ,[504,3,"Cornus",0,66,20,46,5,0]
@@ -528,7 +528,7 @@ cardOBJ = [
 ,[506,3,"Dark Shadow",0,67,20,47,5,0]
 ,[507,3,"Luciola Vespa",0,64,20,44,5,0]
 ,[508,3,"Tatacho",0,62,20,42,5,0]
-,[509,999,"Rata","MATK + 10<BR><b>*Warning*</b>MATK Bonus not implemented yet<b>*Warning*</b>",0]
+,[509,999,"Rata",0,98,10,0]
 ,[510,2,"Dark Pinguicula","<b>[Alchemist Class]</b><br>Nullifies the use of Bottle Grenades when casting the Demonstration skill<br>Increases SP usage of Demonstration by 15 SP<br><b>Only works in PvM</b>",0]
 ,[511,999,"Duneyrr",0,17,10,0]
 ,[512,999,"Phylla",0,2,1,5,1,0]
@@ -582,7 +582,7 @@ cardOBJ = [
 ,[555,2,"Engkanto","Ignore 25% of Plant monster defense.",45,25,0]
 ,[556,1,"Manananggal",0,93,20,92,3,94,3,0]
 ,[557,4,"Mangkukulam",0,16,10,0]
-,[558,2,"Tikbalang","MATK + 10.<br/><BR><b>*Warning*</b>MATK Bonus not implemented yet<b>*Warning*</b><br>[Refine Rate +7 or higher]<br/>Add another 5% damage with Wind Magic.<br/>[Refine Rate +9 or higher]<br/>Add another 5% damage with Wind Magic.",344,5,0]
+,[558,2,"Tikbalang","[Refine Rate +7 or higher]<br/>Add another 5% damage with Wind Magic.<br/>[Refine Rate +9 or higher]<br/>Add another 5% damage with Wind Magic.",98,10,344,5,0]
 ,[559,7,"Tiyanak",0,117,7,112,7,115,7,0]
 ,[560,5,"Wakwak","For every 10 Base STR, ATK + 5.",0]
 ,[561,5,"Jejeling","For every 10 Base VIT, HP + 200",0]
